# opengl-minecraft

./: .gitignore  CMakeLists.txt  README.md
include/core/engine/: engine.h  engine_system.h
include/core/gfx/: renderer.h  window.h
include/engine/: engine.h  input_manager.h
include/gfx/: buffer_object.h  renderer.h  shader.h  shader_program.h  vao.h  vbo.h  window.h
include/util/: logger.h  types.h
lib/glad/glad/: gl.h
res/shaders/: default.fs  yellow.fs
scripts/: build.ps1
src/: glad.c  main.cpp
src/core/enigne/: engine.cpp  input_manager.cpp
src/core/gfx/: renderer.cpp  window.cpp
src/enigne/: engine.cpp  input_manager.cpp
src/gfx/: buffer_object.cpp  renderer.cpp  shader.cpp  shader_program.cpp  vao.cpp  vbo.cpp  window.cpp
src/util/: logger.cpp
